# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import(
    "//foundation/communication/dsoftbus/core/transmission/trans_channel/trans_channel.gni")
import("//foundation/communication/dsoftbus/dsoftbus.gni")

trans_session_src = trans_channel_src
trans_session_inc = trans_channel_inc
trans_session_deps = trans_channel_deps
trans_session_external_deps = []

trans_session_src += [
  "$dsoftbus_root_path/core/transmission/session/src/trans_session_manager.c",
  "$dsoftbus_root_path/core/transmission/session/src/trans_session_service.c",
]
trans_session_inc += [
  "$dsoftbus_root_path/core/transmission/ipc/include",
  "$dsoftbus_root_path/core/transmission/session/include",
  "$dsoftbus_root_path/core/transmission/interface",
]

if (defined(ohos_lite)) {
  if (ohos_kernel_type == "liteos_m") {
    trans_session_src += [
      "$dsoftbus_root_path/core/transmission/ipc/mini/trans_client_proxy.c",
    ]
    trans_session_inc +=
        [ "$dsoftbus_root_path/sdk/transmission/trans_channel/manager/include" ]
    trans_session_deps += [ "//build/lite/config/component/cJSON:cjson_static" ]
  } else {
    trans_session_src += [
      "$dsoftbus_root_path/core/transmission/ipc/small/trans_client_proxy.c",
    ]
    trans_session_deps += [
      "//build/lite/config/component/cJSON:cjson_shared",
      "//foundation/communication/ipc/interfaces/innerkits/c/ipc:ipc_single",
    ]
  }
} else {
  trans_session_inc += [
    "$dsoftbus_root_path/core/transmission/ipc/$os_type/include",
    "$dsoftbus_root_path/sdk/frame/$os_type/include",
    "$dsoftbus_root_path/sdk/transmission/trans_channel/tcp_direct",
    "//third_party/cJSON",
    "//third_party/bounds_checking_function/include",
  ]
  trans_session_src += [
    "$dsoftbus_root_path/core/transmission/ipc/$os_type/src/trans_client_proxy.cpp",
    "$dsoftbus_root_path/core/transmission/ipc/$os_type/src/trans_client_proxy_standard.cpp",
  ]
  trans_session_deps +=
      [ "//third_party/bounds_checking_function:libsec_shared" ]
  trans_session_external_deps += [ "c_utils:utils" ]
}
